# openfeature-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yaml
quonfig_openfeature/: __init__.py  context.py  errors.py  provider.py
tests/: conftest.py
tests/conformance/: test_spec.py
tests/fixtures/configs/: my-float.json  my-int.json  my-json.json  my-list.json  my-string.json
tests/fixtures/feature-flags/: my-flag.json  plan-flag.json
tests/integration/: test_integration.py
tests/unit/: test_context.py  test_errors.py  test_provider.py
